fixed an issue in messages where it becomes behind content

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -5,6 +5,7 @@
 	bottom: 0;
 	right: 0;
 	padding: 15px;
+	z-index: 99999;
 	.message {
 		@include box_shadow(5);
 		transition: 0.4s all;
